# marin

./: .gitattributes  .gitignore  AGENTS.md  TESTING.md  mkdocs.yml  pyproject.toml
.agents/ops/: 2026-07-15-iris-non-atomic-preempt-place-stalled-workers.md  2026-07-22-coreweave-kueue-leader-loss.md  2026-07-22-iris-proxy-health-stalls.md  2026-07-23-finelog-rno2a-readiness-loop.md
.agents/projects/: 2026-07-02_iris_per_endpoint_ingress_auth.md  2026-07-23_iris_operator_vocabulary.md  20260721_grafana_infra_dashboard.md  eval-rollup-design.md  ferry_framework.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/codeql/: javascript-typescript.yml
.github/workflows/: README.md  ducky-deploy.yaml  dupekit-release-wheels.yaml  dupekit-unit.yaml  iris-native-release-wheels.yaml  iris-smoke-coreweave.yaml  iris-smoke-gcp.yaml  levanter-unit.yaml  marin-canary-datakit-tier1.yaml  (+21 more)
docs/: debug-log-coreweave-ci-secret-access.md
experiments/: llama.py  marin_tokenizer.py  simple_train_config.py
infra/: configure_buckets.py  linter.py  pre-commit.py
infra/grafana/: Dockerfile  Pulumi.marin-grafana.yaml  Pulumi.yaml  README.md  __main__.py  entrypoint.sh  pyproject.toml
infra/grafana/dashboards/: finelog.json  fleet.json  home.json  infra.json  iris.json  k8s.json  pipelines.json  training.json
infra/grafana/dashboards/panels/: control_plane_components.json  crashlooping_pods.json  crashloops_count.json  finelog_fleet_health.json  gpu_rack_tray_inventory.json  healthy_workers_count.json  iris_controller_up.json  k8s_apis_unreachable.json  kueue_admission_backlog.json  pending_gated_pods.json  pending_pods_count.json  tpu_chips_count.json  warning_events.json
infra/grafana/marin-infra-panel/: README.md  package-lock.json  package.json  playwright.config.ts
infra/grafana/marin-infra-panel/src/: data.test.ts  data.ts  module.ts  plugin.json  types.ts
infra/grafana/marin-infra-panel/src/components/: CommitStrip.tsx  InfraPanel.tsx  NightlyMatrix.tsx  PanelMessage.tsx  WandbChart.tsx  palette.ts  panels.test.tsx
infra/grafana/marin-infra-panel/tests/: dashboard.spec.ts
infra/grafana/provisioning/alerting/: contact-points.yaml  policies.yaml  rules.yaml
infra/grafana/provisioning/dashboards/: marin.yaml
infra/grafana/provisioning/datasources/: finelog.yaml  github.yaml  iris.yaml  k8s.yaml  wandb.yaml
infra/grafana/src/: cache.py  config.py  dashboard_stitch.py  discovery.py  errors.py  finelog_health.py  finelog_source.py  github_app.py  github_source.py  graphql_source.py  iris_source.py  k8s_source.py  loom_alerts.py  nightly.py  nightly_config.py  server.py  stack_outputs.py  wandb_source.py
infra/grafana/tests/: conftest.py  fixture_bridge.py  test_bridge.py  test_config.py  test_dashboard_stitch.py  test_github_app.py  test_k8s_source.py  test_loom_alerts.py  test_nightly.py  test_provisioning.py  test_sources.py  test_stack_outputs.py
infra/iac/: Pulumi.cw-us-east-08a.yaml  Pulumi.cw-us-west-04a.yaml  README.md  __main__.py  pyproject.toml
infra/iac/scripts/: verify_no_drift.py
infra/iac/src/iac/: config.py  nodepools.py
infra/iac/src/iac/coreweave/: cluster.py  kueue.py  rbac.py  traefik.py
infra/iac/src/iac/gcp/: cloud_run.py  cloud_sql.py  permissions.py
infra/iac/src/iac/iris/: deploy.py  service.py
infra/iac/tests/: test_nodepools.py  test_permissions.py
infra/pulumi/: Pulumi.cw-rno2a.yaml  Pulumi.cw-us-east-02a.yaml  Pulumi.cw-us-east-08a.yaml  Pulumi.marin.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml
infra/pulumi/github/: Pulumi.marin-community.yaml  Pulumi.yaml  README.md  __main__.py  audit.py
infra/pulumi/scripts/: verify_no_drift.py
infra/pulumi/src/iac/: config.py  nodepools.py
infra/pulumi/src/iac/coreweave/: cluster.py  dns.py  kueue.py  rbac.py  traefik.py
infra/pulumi/src/iac/gcp/: addresses.py  cloud_run.py  permissions.py  registries.py
infra/pulumi/src/iac/github/: audit.py  credentials.py  inventory.py  resources.py
infra/pulumi/src/iac/iris/: deploy.py  service.py  spec.py
infra/pulumi/tests/: test_github_credentials.py  test_iris_service.py  test_nodepools.py  test_permissions.py  test_registries.py
lib/dupekit/: README.md  build_package.py  pyproject.toml
lib/dupekit/rust/: Cargo.toml  pyproject.toml
lib/dupekit/rust/src/: lib.rs
lib/dupekit/src/dupekit/: __init__.py
lib/iris/rust/: Cargo.toml  build_package.py  iris_native.pyi  pyproject.toml
lib/iris/rust/pyext/: Cargo.toml
lib/iris/rust/pyext/src/: lib.rs
lib/iris/rust/src/: auth.rs  lib.rs
lib/rigging/: pyproject.toml
lib/rigging/src/rigging/: auth.py  auth_config.py  auth_vectors.json  cluster_manifest.py  connect.py  credential_store.py  credentials.py  distributed_lock.py  filesystem.py  log_setup.py  provenance.py  redaction.py  secrets.py  server_auth.py  telltale.py  testing.py  timing.py  token_authority.py
lib/rigging/src/rigging/filesystem/: __init__.py  cluster_config.py  cross_region.py  distributed_lock.py  factory.py  mirror.py  s3_compat.py  storage_path.py
lib/rigging/tests/: conftest.py  test_auth.py  test_auth_config.py  test_auth_vectors.py  test_cluster_config.py  test_cluster_manifest.py  test_credential_store.py  test_credentials.py  test_cross_region.py  test_data_config.py  test_factory.py  test_filesystem.py  test_mirror.py  test_provenance.py  test_record_transfer.py  test_redaction.py  test_region_routing.py  test_rpc.py  test_secrets.py  test_server_auth.py  test_storage_path.py  test_telltale.py  test_timing.py  test_token_authority.py
scripts/: fix_datakit_artifacts.py  python_libs_package.py  qwen3_moe_iris_smoke.py  rust_mode.py  sample_v0_1_store.py  verify_smoke_v0.py
tests/: conftest.py  integration_test.py  test_chat_template_message_spans.py  test_consolidate_metadata.py  test_download_pretokenized.py  test_grug_launch_checkpoint_paths.py  test_grug_sharding_dump.py  test_grug_variant_contracts.py  test_integration_test.py  test_marin_tokenizer.py  test_slice_cache.py  test_snowball_grug_parity.py  test_training.py  test_utils.py  test_validate_canary_metrics.py
(+1292 files in other folders)
