[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-dupekit"
# Canonical version for the released pair; build_package.py stamps the resolved
# version into this file and rust/Cargo.toml so both dists agree.
version = "0.1.2"
description = "Optimized text de-duplication kernels (Rust) with a pure-Python surface."
readme = "README.md"
requires-python = ">=3.12"
# `import dupekit` re-exports the native `dupekit_native` extension, which ships
# as the companion marin-dupekit-native platform wheel (maturin, rust/), built
# in lockstep by dupekit-release-wheels.yaml. It is a hard runtime dependency —
# the pure package is only the proxy/type surface. The `>= X.Y.Z.dev0` floor
# opts uv into the daily nightly wheels; `scripts/rust_mode.py dev` swaps the
# [tool.uv.sources] entry below to the local rust/ tree so it builds from source.
dependencies = [
    "marin-dupekit-native >= 0.1.2.dev0",
]

[project.urls]
Homepage = "https://github.com/marin-community/marin"
Issues = "https://github.com/marin-community/marin/issues"

[dependency-groups]
test = [
    "huggingface-hub",
    "pyarrow>=23.0.0",
    "pytest>=8.3.2",
    "pytest-timeout",
    # unified-unit runs pytest with `-n auto`; finelog's test group carries xdist too.
    "pytest-xdist",
]
dev = [
    { include-group = "test" },
]

[project.optional-dependencies]
benchmark = [
    "pytest-benchmark>=5.2.3",
    "pytest-memray>=1.8.0",
]

# Without an explicit list the sdist would sweep the whole directory, including
# the rust/ tree that ships separately as marin-dupekit-native.
[tool.hatch.build.targets.sdist]
only-include = ["src/dupekit", "tests", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/dupekit"]

[tool.uv.sources]
# `scripts/rust_mode.py dev` points marin-dupekit-native at ./rust here (and at
# lib/dupekit/rust in the root pyproject) so the extension builds from source;
# `user` mode clears the block and the pre-built wheel comes from PyPI.
# ### BEGIN RUST-DEV SOURCES ###
# ### END RUST-DEV SOURCES ###

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
