[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-rigging"
version = "0.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.3.1",
    "connect-python>=0.9.0",
    "fsspec>=2024.0.0",
    "gcsfs>=2024.0.0",
    "google-auth>=2.0.0",
    # EdDSA (Ed25519) service-token signing/verification in rigging.token_authority.
    # The [crypto] extra pulls in `cryptography`, which the EdDSA algorithm needs.
    "PyJWT[crypto]>=2.12.0",
    "pyyaml>=6.0",
    "requests>=2.0.0",
    "s3fs>=2024.0.0",
    "starlette>=0.40",
]

[project.optional-dependencies]
# Interactive desktop-OAuth login for IAP (run_iap_desktop_login). Only the
# human login path needs it; servers and workers never import it.
iap = ["google-auth-oauthlib>=1.0.0"]
# Resolving gcp-secret:// references in rigging.secrets. env:/file: references
# need nothing extra; only the Secret Manager source imports this, lazily.
secrets = ["google-cloud-secret-manager>=2.16.0"]

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-xdist",
]
dev = [{ include-group = "test" }]

[tool.hatch.build.targets.wheel]
packages = ["src/rigging"]

[tool.hatch.build.targets.wheel.force-include]
# The repo-root config/ cluster YAMLs are configuration data, not package
# source. force-include maps them into the wheel at rigging/clusters/ so that an
# installed rigging (no checkout) can still resolve config/marin.yaml via the
# bundled-dir probe in filesystem._bundled_cluster_config_dir(). Mirrors the
# iris pattern (lib/iris/pyproject.toml -> iris/config).
"../../config" = "rigging/clusters"

[tool.pytest.ini_options]
timeout = 10
