[package]
name = "dupekit-native"
version = "0.1.2"
edition = "2021"

# Keep in sync with `module-name` in the sibling pyproject.toml. See
# src/dupekit/__init__.py for why the extension is a top-level module.
[lib]
name = "dupekit_native"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "57.1", default-features = false, features = ["pyarrow"] }
blake2 = "0.10"
blake3 = "1.8"
hex = "0.4"
parquet = { version = "57.1", default-features = false, features = ["arrow", "snap", "brotli", "flate2-zlib-rs", "lz4", "zstd"] }
pyo3 = { version = "0.26", features = [
    "extension-module",
    "abi3-py312",
] } # stable ABI with minimum Python version 3.12
rand = "0.8"
rand_pcg = "0.3"
regex = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# thin-LTO: within ~1% of fat-LTO runtime at a fraction of the link time.
[profile.release]
lto = "thin"
codegen-units = 16
strip = "symbols"
