[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "marin-iris-native"
version = "0.1.0"
description = "Native runtime components for Iris."
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/marin-community/marin"
Issues = "https://github.com/marin-community/marin/issues"

[tool.maturin]
manifest-path = "pyext/Cargo.toml"
module-name = "iris_native"
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    "pyproject.toml",
    "Cargo.toml",
    "Cargo.lock",
    "src/**/*.rs",
    "pyext/Cargo.toml",
    "pyext/src/**/*.rs",
    "iris_native.pyi",
]
