[package]
name = "iris-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "iris_native"
crate-type = ["cdylib"]

[dependencies]
iris-proxy = { path = ".." }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py312"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1"
